data/src/pages/Public/Gallery/Gallery.module.css
.container {
    position: relative;
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 20px;
    color: white;
    z-index: 80;
}

.models {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 85%;
    height: 500px;
    gap: 21px;
}

.models img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 6px;
}

.model {
    width: 110px;
    border-radius: 6px;
    cursor: pointer;
    position: relative;
    transition: all 0.7s ease;
}

.models .model:first-child,
.models .model:last-child {
    height: 300px;
}

.models .model:nth-child(2),
.models .model:nth-child(6) {
    height: 350px;
}

.models .model:nth-child(3),
.models .model:nth-child(4),
.models .model:nth-child(5) {
    height: 400px;
}

.container h1 {
    font-size: 30px;
    font-weight: 700;
    text-align: center;
    text-transform: uppercase;
    color: #ffffff;
    position: absolute;
    top: 50%;
    left: -10%;
    transform: rotate(270deg);
    transition: 0.7s ease;
}

.details {
    position: absolute;
    bottom: 43px;
    left: 43px;
    z-index: 20;
}

.details h2 {
    font-size: 26px;
    font-weight: 700;
    text-align: left;
    line-height: 44px;
    text-align: left;
    color: #fff;
    text-transform: uppercase;
    transition: 0.7s ease;
    display: none;
    z-index: 20;
}

.details p {
    font-size: 20px;
    font-weight: 700;
    text-align: left;
    line-height: 33px;
    text-align: left;
    color: #fff;
    text-transform: uppercase;
    transition: 0.7s ease;
    display: none;
    z-index: 20;
}

.model.active {
    width: 600px !important;
    height: 500px !important;
}

.model.active::after {
    content: '';
    position: absolute;
    width: 60%;
    height: 25%;
    background: linear-gradient(to right, rgba(0, 0, 0, 0.595), rgba(128, 0, 128, 0.627), transparent);
    left: 0;
    bottom: 10%;
    clip-path: polygon(0 0, 100% 0, 85% 100%, 0 100%);
    z-index: 10;
}

.model.active h1 {
    display: none;
}

.model.active .details p,
.model.active .details h2 {
    display: block;
    z-index: 20;
}

.hidden {
    display: none;
}

